# boxbopper

./: .gitignore  Cargo.toml  README.md  backup.rs  boxbopperbase.rs  boxbopperconsole.rs  builtins.rs  dgens.rs  examples.rs  level.rs  sprite.rs  stackstack.rs  time.rs  todo.txt  vector.rs
boxboppersolver/: Cargo.toml  boxboppersolver.rs
boxboppersolver/levels/: level01.txt  level02.txt  level03.txt  level04.txt  level05.txt  level06.txt  level07.txt  level08.txt  level20.txt  test01.txt  test02.txt
boxboppertool/: Cargo.toml  boxboppertool.rs  defs.rs  pathnodemap.rs  pathnodemap2.rs  shrunkpath.rs  solve.rs  test-level.txt  unsolve.rs  version_a.speed_test  version_b.speed_test  version_c.speed_test  version_d.speed_test  version_e.speed  wall-test.txt  win_speed_a.speed_test  win_speed_b.speed  win_speed_c.speed  win_speed_d.speed  win_speed_e.speed  win_speed_f.speed  win_speed_g.speed  win_speed_h.speed  win_speed_i.speed  wsl_a.speed  wsl_sp128x8.speed  wsl_speed_a.speed
boxboppertool/levels/: rl-10x5-b4-d14-m45-joterodaki-45.txt  rl-10x5-b4-d15-m40-kojutameko-40.txt  rl-10x5-b4-d15-m57-butiwibamu-57.txt  rl-10x5-b4-d16-m38-rapobefolo-38.txt  rl-10x5-b4-d16-m40-leyejobuno-40.txt  rl-10x5-b4-d17-m41-sukesogapu-41.txt  rl-10x5-b4-d17-m44-rejabirawo-44.txt  rl-10x5-b4-d17-m45-viloyisuhi-45.txt  rl-10x5-b4-d17-m45-zojihojupe-45.txt  rl-10x5-b4-d17-m49-robajepuwi-49.txt  rl-10x5-b4-d17-m54-gurinifize-54.txt  rl-10x5-b4-d18-m41-segunupiye-41.txt  rl-10x5-b4-d18-m42-zoparakumo-42.txt  rl-10x5-b4-d19-m49-segunupiye-49.txt  rl-10x5-b4-d22-m48-fabozajoyu-48.txt  rl-10x5-b4-d23-m42-bojudogusa-42.txt  rl-10x5-b5-d20-m40-hatalulelo-40.txt  rl-10x5-b6-d12-m37-gotisadepo-37.txt  rl-10x5-b6-d12-m37-hanemuwazi-37.txt  rl-10x5-b6-d12-m38-vivufuzoze-38.txt  rl-10x5-b6-d12-m38-vofilukunu-38.txt  rl-10x5-b6-d12-m41-nuwoberoza-41.txt  rl-10x5-b6-d13-m40-poretalumi-40.txt  rl-10x5-b6-d14-m44-nujevebife-44.txt  rl-10x5-b6-d15-m41-hemarulule-41.txt  rl-10x5-b6-d16-m42-yofanugudi-42.txt  rl-10x5-b6-d17-m39-gowubiwuru-39.txt  rl-10x5-b6-d17-m40-wamugegihe-40.txt  rl-10x5-b6-d17-m42-hizozuwozo-42.txt  rl-10x5-b6-d17-m47-vomawirasa-47.txt  rl-10x5-b6-d17-m49-pavanujero-49.txt  rl-10x5-b6-d18-m37-zagiyasupi-37.txt  rl-10x5-b6-d18-m39-hubatojiwi-39.txt  rl-10x5-b6-d18-m42-nesupajaza-42.txt  rl-10x5-b6-d20-m40-honatubiti-40.txt  rl-10x5-b6-d20-m49-tuyawohito-49.txt  rl-10x5-b6-d21-m38-zegokinuye-38.txt  rl-10x5-b6-d21-m59-yohayafume-59.txt  rl-10x5-b6-d22-m44-hizoyumevu-44.txt  rl-10x5-b6-d22-m53-nimozezedi-53.txt  (+260 more)
boxboppertool/levels-to-test/: rl-10x10-5-53-zegasaheke.txt  rl-9x8-3-38-nuyolonoyi.txt
boxboppertool/levels_oldfmt/: rl-10x5-b4-d13-m38-sewawubuva-38.txt  rl-10x5-b4-d13-m38-vuhayesado-38.txt  rl-10x5-b4-d14-m43-tehekalavo-43.txt  rl-10x5-b4-d17-m39-nipizoneni-39.txt  rl-10x5-b4-d18-m40-kidufahazu-40.txt  rl-10x5-b4-d18-m48-yapevisuru-48.txt  rl-10x5-b6-d12-m38-viloyisuhi-38.txt  rl-10x5-b6-d14-m39-julejeyodi-39.txt  rl-10x5-b6-d16-m45-nozahedoli-45.txt  rl-10x5-b6-d16-m49-goyerejuhe-49.txt  rl-10x5-b6-d17-m38-hozirapewu-38.txt  rl-10x5-b6-d17-m59-wehafiyeri-59.txt  rl-10x5-b6-d18-m44-ritinokopu-44.txt  rl-10x5-b6-d18-m55-robajepuwi-55.txt  rl-10x5-b6-d19-m41-fegopikome-41.txt  rl-10x5-b6-d22-m49-rejabirawo-49.txt  rl-10x5-b6-d22-m50-fabozajoyu-50.txt  rl-10x5-b6-d24-m56-gamonuvuho-56.txt  rl-10x5-b6-d25-m45-nuzusumoya-45.txt  rl-6x6-b3-d10-m32-behojipapo-35.txt  rl-6x6-b3-d11-m31-toyuyetiso-32.txt  rl-6x6-b3-d12-m26-jahozinumo-29.txt  rl-6x6-b3-d12-m31-sahiwilaga-35.txt  rl-6x6-b3-d13-m26-yevoloyomo-27.txt  rl-6x6-b3-d13-m28-pazukopubi-30.txt  rl-6x6-b3-d13-m29-vihumunuri-32.txt  rl-6x6-b3-d13-m32-kihuwolobi-35.txt  (+116 more)
boxboppertui/: Cargo.toml  boxboppertui.rs
(+47 files in other folders)
