[package]
name = "boxboppertool"
version = "0.1.0"
authors = ["David Atkinson <67101285+david47k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxbopper = { path = "../", version = "0.1.0" }
rayon = "1.3.1"
rand = "0.7.3"
rand_chacha = "0.2.2"

[[bin]]
name = "boxboppertool"
path = "boxboppertool.rs"

