[package]
name = "boxboppertool"
version = "0.1.0"
authors = ["David Atkinson <67101285+david47k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxbopper = { path = "../", version = "0.1.0" }
rayon = "1.4.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
bevy_tasks = "0.5.0"
itertools = "0.10.1"
num_cpus = "1.13"
arc-swap = "1.4.0"

[profile.release]
lto = "fat"
codegen-units = 4
debug=2

[[bin]]
name = "boxboppertool"
path = "boxboppertool.rs"

