[package]
name = "boxboppertui"
version = "0.1.0"
authors = ["David Atkinson <67101285+david47k@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3.32"
boxbopper = { path = ".." }


crossterm = { version = "0.21", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"

[dependencies.web-sys]
version = "0.3.42"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bin]]
name = "boxboppertui"
path = "boxboppertui.rs"

